--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -194,37 +194,22 @@ h1.main-heading {
 
 .btn-search {
 
-    width: 10%;
-    height: 50px;
-    vertical-align: top;
-    border-radius: 0 100px 100px 0;
-
-}
-
-/*
- Button styles
- Structured for possible implemantation of more buttons
- */
-
-.btn{
-
     cursor: pointer;
     border: none;
     min-width: 100px;
-
-}
-
-.btn:focus {
-
-    outline: none;
-
-}
-
-.btn-default {
-
+    width: 10%;
+    height: 50px;
     background: #2c3e50;
+    vertical-align: top;
+    border-radius: 0 100px 100px 0;
     font-size: 20px;
     color: white;
+
+}
+
+.btn-search:focus {
+
+    outline: none;
 
 }
 
